[Bug #1189] Added auto horizontal scroll in templates WBS to fix bug
FEA: ItEr75S04BugFixing

--- a/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
@@ -1781,3 +1781,7 @@ select {
 .z-borderlayout {
     background-color: transparent;
 }
+
+.template-tree-tabpanel {
+    overflow-x: auto;
+}
